feat: Tambahkan fungsionalitas baru untuk pengelolaan perusahaan, termasuk pembuatan dan pembaruan clientId serta clientSecret, dan perbarui DTO untuk mendukung roleType
